Fix gray gap below sidebar

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ margin-right : auto;
 margin-top : 10px;
 padding : 0;
 line-height : 1.8em;
+overflow : hidden;
 }
 #menucontainer {
 position : relative;
